<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

    <item android:title="@string/policy">
        <menu>
            <item
                android:id="@+id/nav_policy"
                android:icon="@drawable/ic_security_black_24dp"
                android:title="@string/policy" />
        </menu>
    </item>

</menu>
